[package]
name = "piston_mix_economy"
version = "0.2.1"
authors = ["bvssvni <bvssvni@gmail.com>"]
description = "A research project to mix-regulate economy in MMO worlds"
license = "MIT OR Apache-2.0"
exclude = ["images/*"]
readme = "README.md"
repository = "https://github.com/advancedresearch/mix_economy.git"
homepage = "https://github.com/advancedresearch/mix_economy"

[dev-dependencies]
piston_window = "0.120.0"
rand = "0.8.3"
piston-timer_controller = "0.21.0"
